@@ -27,6 +27,8 @@ SimGrid (3.3.5-svn) unstable; urgency=low
       and call MSG_action_trace_run(NULL)
     You can still have one merged file for each processes.
   * Kill the MSG_paje_output() function. It's a noop since 2 years.
+  * Kill MSG_WARNING and MSG_FATAL return codes: they were not used
+    anywere in source.
  SIMIX:
   * add a SIMIX_sem_get_capacity() function
       
